-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Regression introduced by
fff650726b LU-13642 lnet: Allow dynamic IP specification
/home/hornc/lustre-wc-rel/lustre/../lnet/utils/lnetctl net set --health 1000 --all
---
set:
- net:
errno: 3
descr: ! "Object not found"
...
The error is false meaning the command actually did what it was supposed to.
- is related to
-
LU-13642 lnetctl: Allow IP specification
-
- Open
-